@@ -1,0 +1,122 @@
+<?xml version="1.0"?>
+<!DOCTYPE MODE SYSTEM "xmode.dtd">
+<MODE>
+	<PROPS>
+		<PROPERTY NAME="commentStart" VALUE="/*" />
+		<PROPERTY NAME="commentEnd" VALUE="*/" />
+		<PROPERTY NAME="lineComment" VALUE="--" />
+	</PROPS>
+	<RULES IGNORE_CASE="TRUE" HIGHLIGHT_DIGITS="TRUE">
+		<SPAN TYPE="COMMENT1">
+			<BEGIN>/*</BEGIN>
+			<END>*/</END>
+		</SPAN>
+		<SPAN TYPE="LITERAL1">
+			<BEGIN>'</BEGIN>
+			<END>'</END>
+		</SPAN>
+		<SPAN DELEGATE="pl-sql::MAIN">
+			<BEGIN>"</BEGIN>
+			<END>"</END>
+		</SPAN>
+		<EOL_SPAN TYPE="COMMENT1">--</EOL_SPAN>
+		<SEQ TYPE="OPERATOR">+</SEQ>
+		<SEQ TYPE="OPERATOR">-</SEQ>
+		<SEQ TYPE="OPERATOR">/</SEQ>
+		<SEQ TYPE="OPERATOR">*</SEQ>
+		<SEQ TYPE="OPERATOR">=</SEQ>
+		<SEQ TYPE="OPERATOR">&gt;</SEQ>
+		<SEQ TYPE="OPERATOR">&lt;</SEQ>
+		<SEQ TYPE="OPERATOR">%</SEQ>
+		<SEQ TYPE="OPERATOR">&amp;</SEQ>
+		<SEQ TYPE="OPERATOR">|</SEQ>
+		<SEQ TYPE="OPERATOR">^</SEQ>
+		<SEQ TYPE="OPERATOR">~</SEQ>
+		<SEQ TYPE="OPERATOR">!=</SEQ>
+		<SEQ TYPE="OPERATOR">!&gt;</SEQ>
+		<SEQ TYPE="OPERATOR">!&lt;</SEQ>
+		<SEQ TYPE="OPERATOR">:=</SEQ>
+        
+		<KEYWORDS>
+			<!-- reserved words -->
+			<KEYWORD1>LOAD</KEYWORD1>
+			<KEYWORD1>DATA</KEYWORD1>
+			<KEYWORD1>INFILE</KEYWORD1>
+			<KEYWORD1>BADFILE</KEYWORD1>
+			<KEYWORD1>DISCARDFILE</KEYWORD1>
+			<KEYWORD1>INTO</KEYWORD1>
+			<KEYWORD1>TABLE</KEYWORD1>
+			<KEYWORD1>FIELDS</KEYWORD1>
+			<KEYWORD1>TERMINATED</KEYWORD1>
+			<KEYWORD1>BY</KEYWORD1>
+			<KEYWORD1>OPTIONALLY</KEYWORD1>
+			<KEYWORD1>ENCLOSED</KEYWORD1>
+			<KEYWORD1>EXTERNAL</KEYWORD1>
+			<KEYWORD1>TRAILING</KEYWORD1>
+			<KEYWORD1>NULLCOLS</KEYWORD1>
+			<KEYWORD1>NULLIF</KEYWORD1>
+			<KEYWORD1>DATA</KEYWORD1>
+			<KEYWORD1>BLANKS</KEYWORD1>
+			<KEYWORD1>INSERT</KEYWORD1>
+			<KEYWORD1>INTO</KEYWORD1>
+			<KEYWORD1>POSITION</KEYWORD1>
+			<KEYWORD1>WHEN</KEYWORD1>
+			<KEYWORD1>APPEND</KEYWORD1>
+			<KEYWORD1>REPLACE</KEYWORD1>
+			<KEYWORD1>EOF</KEYWORD1>
+			<KEYWORD1>LOBFILE</KEYWORD1>
+			<KEYWORD1>TRUNCATE</KEYWORD1>
+			<KEYWORD1>COLUMN</KEYWORD1>
+            
+            <!--function-->
+			<KEYWORD1>COUNT</KEYWORD1>
+			<KEYWORD1>AND</KEYWORD1>
+			<KEYWORD1>SDF</KEYWORD1>
+			<KEYWORD1>OR</KEYWORD1>
+			<KEYWORD1>SYSDATE</KEYWORD1>
+
+			<!-- data types -->
+			<KEYWORD1>binary</KEYWORD1>
+			<KEYWORD1>bit</KEYWORD1>
+			<KEYWORD1>blob</KEYWORD1>
+			<KEYWORD1>boolean</KEYWORD1>
+			<KEYWORD1>char</KEYWORD1>
+			<KEYWORD1>character</KEYWORD1>
+			<KEYWORD1>constant</KEYWORD1>
+			<KEYWORD1>date</KEYWORD1>
+			<KEYWORD1>datetime</KEYWORD1>
+			<KEYWORD1>decimal</KEYWORD1>
+			<KEYWORD1>double</KEYWORD1>
+			<KEYWORD1>filler</KEYWORD1>
+			<KEYWORD1>float</KEYWORD1>
+			<KEYWORD1>image</KEYWORD1>
+			<KEYWORD1>int</KEYWORD1>
+			<KEYWORD1>integer</KEYWORD1>
+			<KEYWORD1>money</KEYWORD1>
+			<!-- KEYWORD1>name</KEYWORD1 -->
+			<KEYWORD1>numeric</KEYWORD1>
+			<KEYWORD1>nchar</KEYWORD1>
+			<KEYWORD1>nvarchar</KEYWORD1>
+			<KEYWORD1>ntext</KEYWORD1>
+			<KEYWORD1>object</KEYWORD1>
+			<KEYWORD1>pls_integer</KEYWORD1>
+			<KEYWORD1>raw</KEYWORD1>
+			<KEYWORD1>real</KEYWORD1>
+			<KEYWORD1>smalldatetime</KEYWORD1>
+			<KEYWORD1>smallint</KEYWORD1>
+			<KEYWORD1>smallmoney</KEYWORD1>
+			<KEYWORD1>sequence</KEYWORD1>
+			<KEYWORD1>text</KEYWORD1>
+			<KEYWORD1>timestamp</KEYWORD1>
+			<KEYWORD1>tinyint</KEYWORD1>
+			<KEYWORD1>uniqueidentifier</KEYWORD1>
+			<KEYWORD1>varbinary</KEYWORD1>
+			<KEYWORD1>varchar</KEYWORD1>
+			<KEYWORD1>varchar2</KEYWORD1>
+			<KEYWORD1>varray</KEYWORD1>
+			<KEYWORD1>zoned</KEYWORD1>
+		</KEYWORDS>
+	</RULES>
+</MODE>
+
+ 	  	 
